# python-common-logger

./: MANIFEST.in  README.txt  __init__.py  pyproject.toml  setup.py
.github/: pull_request_template.md
python_common_logger/: __init__.py
python_common_logger/src/: logger.py
python_common_logger/src/constants/: context.py  logger.py  request.py
python_common_logger/src/context/: context_handler.py  execution_context.py
python_common_logger/src/django/: middleware.py
python_common_logger/src/exceptions/: base.py  validation_error.py
python_common_logger/src/fastapi/: middleware.py
python_common_logger/src/flask/: middleware.py
python_common_logger/src/utils/: logger.py
src/: logger.py
src/context/: context.py
src/django/: middleware.py
