[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-common-logger"
version = "0.0.1"
description = "Simpplr common logger for Python packages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]